# lixchess

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml
client/: CMakeLists.txt  Cargo.toml
client/glad/include/glad/: glad.h
client/glad/src/: glad.c
client/include/: main.h  render.h  shader.h  ui.h  util.h
client/src/: main.c  render.c  shader.c  ui.c  util.c
client/src/shader/: ui.frag.glsl  ui.vert.glsl
core/: Cargo.toml  build.rs
core/include/: chess.h
core/protos/: main.proto
core/src/: board.rs  lib.rs  net.rs
core/src/proto/: main.rs
lobby/: main.go
server/: Cargo.toml
