[package]
name = "lixchess_core"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Code shared between LixChess server and client"

[dependencies]
derive-new = "0.5.6"
protobuf = { git = "https://github.com/caelunshun/rust-protobuf", features = ["with-bytes"] }
ring = "0.14.6"
bytes = { git = "https://github.com/tokio-rs/bytes" }
log = "0.4.6"
byteorder = "1.3.2"

[build-dependencies]
protoc-rust = "2.6.2"