[package]
name = "lixchess_core"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Code shared between LixChess server and client"

[lib]
name = "chess"
crate-type = ["lib", "cdylib"]

[dependencies]
derive-new = "0.5.6"
log = "0.4.6"
byteorder = "1.3.2"
libc = "0.2.58"